feat: add content - lvl 2

--- a/.github/docs/content/notes/n2.md
+++ b/.github/docs/content/notes/n2.md
@@ -1,8 +1,526 @@
+<!-- markdownlint-disable MD024 -->
+
 # Nível 2 - Escrevendo o seu primeiro programa
 
-> retornar ao [README.md](../../../README.md)
+> retornar ao [README.md](../../../../README.md)
+>
+> ir para [avaliações e quizzes](../tests/t2.md)
 
 ## Súmário
 
 - [Nível 2 - Escrevendo o seu primeiro programa](#nível-2---escrevendo-o-seu-primeiro-programa)
   - [Súmário](#súmário)
+  - [Bloco A - Escrevendo um programa](#bloco-a---escrevendo-um-programa)
+    - [Aula 1 - O que preciso para começar a programar?](#aula-1---o-que-preciso-para-começar-a-programar)
+      - [Ferramentas Necessárias](#ferramentas-necessárias)
+      - [Conceitos Básicos de Programação](#conceitos-básicos-de-programação)
+        - [Sintaxe e Tipos](#sintaxe-e-tipos)
+        - [Estruturas de Controle](#estruturas-de-controle)
+        - [Funções](#funções)
+      - [Primeiro Projeto Simples](#primeiro-projeto-simples)
+      - [Recursos de Aprendizado](#recursos-de-aprendizado)
+      - [Boas Práticas](#boas-práticas)
+      - [Conclusão](#conclusão)
+    - [Aula 5 - Variáveis, tipos de dados e tipagem](#aula-5---variáveis-tipos-de-dados-e-tipagem)
+      - [Variáveis](#variáveis)
+      - [Tipos de Dados](#tipos-de-dados)
+      - [Tipagem](#tipagem)
+      - [Anotações de Tipo](#anotações-de-tipo)
+      - [Conclusão](#conclusão-1)
+  - [Bloco B - Controlando o Fluxo de Execução](#bloco-b---controlando-o-fluxo-de-execução)
+    - [Estruturas condicionais (`if`/`elif`/`else`)](#estruturas-condicionais-ifelifelse)
+    - [Laços de repetição (`for` e `while`) e práticas idiomáticas](#laços-de-repetição-for-e-while-e-práticas-idiomáticas)
+      - [`for` vs. `while`](#for-vs-while)
+      - [Exemplos de boas práticas em laços](#exemplos-de-boas-práticas-em-laços)
+      - [`break` e `continue`](#break-e-continue)
+    - [Tratamento de Exceções (`try`/`except`/`else`/`finally`)](#tratamento-de-exceções-tryexceptelsefinally)
+    - [Funções](#funções-1)
+    - [Geradores (`yield`)](#geradores-yield)
+    - [Gerenciadores de contexto (`with`)](#gerenciadores-de-contexto-with)
+    - [Decoradores](#decoradores)
+    - [Dicas de legibilidade, manutenção e organização](#dicas-de-legibilidade-manutenção-e-organização)
+
+## Bloco A - Escrevendo um programa
+
+### Aula 1 - O que preciso para começar a programar?
+
+Para começar a programar, você precisa de quatro pilares fundamentais: ferramentas, conhecimento de conceitos básicos, prática com exemplos reais e acesso a recursos de aprendizagem de qualidade.
+
+#### Ferramentas Necessárias
+
+1. **Editor de Código**: Um editor ou IDE facilita a escrita e depuração do código. Exemplos populares:
+
+   - [Visual Studio Code](https://code.visualstudio.com/)
+   - [PyCharm Community Edition](https://www.jetbrains.com/pycharm/download/)
+
+2. **Interpretador Python**: Instale a versão mais recente em seu sistema.
+
+   - Baixe em [python.org/downloads](https://www.python.org/downloads/)
+
+3. **Controle de Versão**: Git para gerenciar alterações e colaborar.
+
+   - Documentação em [git-scm.com](https://git-scm.com/)
+   - Plataforma de hospedagem: [GitHub](https://github.com/)
+
+#### Conceitos Básicos de Programação
+
+##### Sintaxe e Tipos
+
+```python
+# Exemplo básico: variáveis e tipos
+nome = "Alice"  # string
+idade = 30       # inteiro
+altura = 1.65    # float
+print(f"{nome} tem {idade} anos e {altura}m de altura.")
+```
+
+##### Estruturas de Controle
+
+```python
+# Condicional
+if idade >= 18:
+    print("Maior de idade")
+else:
+    print("Menor de idade")
+
+# Laço de repetição
+for i in range(5):
+    print(i)
+```
+
+##### Funções
+
+```python
+# Definindo uma função
+
+def saudacao(nome):
+    return f"Olá, {nome}!"
+
+print(saudacao("Mundo"))
+```
+
+#### Primeiro Projeto Simples
+
+Uma calculadora de soma e subtração:
+
+```python
+# calculadora.py
+
+def soma(a, b):
+    return a + b
+
+def subtrai(a, b):
+    return a - b
+
+if __name__ == "__main__":
+    x, y = map(int, input("Digite dois números: ").split())
+    print("Soma:", soma(x, y))
+    print("Subtração:", subtrai(x, y))
+```
+
+#### Recursos de Aprendizado
+
+- **Documentação Oficial**: Tutorial em [docs.python.org/3/tutorial](https://docs.python.org/3/tutorial/)
+- **Cursos Online Gratuitos**:
+
+  - [Codecademy – Learn Python](https://www.codecademy.com/learn/learn-python-3)
+  - [freeCodeCamp – Python](https://www.freecodecamp.org/news/tag/python/)
+
+- **Comunidades e Fóruns**:
+
+  - [Stack Overflow](https://stackoverflow.com/)
+  - [Reddit – r/learnpython](https://www.reddit.com/r/learnpython/)
+
+#### Boas Práticas
+
+- **PEP 8** para estilo de código: [pep8.org](https://pep8.org/)
+- **Comentários e Docstrings**:
+
+```python
+"""
+Este módulo implementa operações básicas de uma calculadora.
+"""
+```
+
+- **Teste**:
+
+```python
+import unittest
+
+class TestCalculadora(unittest.TestCase):
+    def test_soma(self):
+        self.assertEqual(soma(2, 3), 5)
+
+if __name__ == '__main__':
+    unittest.main()
+```
+
+#### Conclusão
+
+Iniciar na programação requer instalação das ferramentas certas, compreensão dos fundamentos, prática com projetos simples e uso de bons recursos de aprendizado. Com Python, você tem uma linguagem versátil e uma comunidade ativa pronta para ajudar sua jornada.
+
+### Aula 5 - Variáveis, tipos de dados e tipagem
+
+Variáveis, tipos de dados e tipagem são conceitos fundamentais em programação que influenciam diretamente na forma como armazenamos, manipulamos e validamos informações em um programa. Em Python, uma linguagem de tipagem dinâmica e forte, esses conceitos ganham características próprias, permitindo grande flexibilidade e, ao mesmo tempo, exigindo atenção quanto à correção de tipos e comportamentos inesperados.
+
+#### Variáveis
+
+Em Python, variáveis são nomes que referenciam objetos na memória. Não existe declaração prévia de tipo: a variável é criada no momento em que recebe um valor.
+
+```python
+# Exemplo de criação de variáveis
+nome = "Alice"
+idade = 30
+altura = 1.65
+```
+
+- A atribuição é feita pelo operador `=` e pode ocorrer em cadeia:
+  `a = b = c = 1`
+
+- Escopo de variáveis: variáveis definidas dentro de funções são locais por padrão, a menos que sejam declaradas como `global` ou `nonlocal` ([regras de escopo em Python](https://docs.python.org/3/faq/programming.html#what-are-the-rules-for-local-and-global-variables-in-python)).
+
+#### Tipos de Dados
+
+Python oferece diversos tipos de dados embutidos, divididos em categorias:
+
+- **Tipos Numéricos**: `int`, `float`, `complex` ([documentação de tipos embutidos](https://docs.python.org/3/library/stdtypes.html#numeric-types-int-float-complex)).
+- **Tipos de Texto**: `str`.
+- **Sequências**: `list`, `tuple`, `range`.
+- **Mapeamentos**: `dict`.
+- **Conjuntos**: `set`, `frozenset`.
+- **Booleano**: `bool`.
+- **Tipos Binários**: `bytes`, `bytearray`, `memoryview`.
+- **Tipo Nulo**: `NoneType`.
+
+```python
+# Exemplos de tipos
+numero = 42              # int
+pi = 3.14                # float
+texto = "Olá, Python!" # str
+lista = [1, 2, 3]        # list
+dicionario = {"a": 1}   # dict
+```
+
+Para mais detalhes, veja [Python Data Types - W3Schools](https://www.w3schools.com/python/python_datatypes.asp).
+
+#### Tipagem
+
+Python é **dinamicamente tipada**, pois o tipo de uma variável é definido em tempo de execução e pode mudar conforme o valor atribuído ([por que Python é chamado de dinamicamente tipada](https://www.geeksforgeeks.org/why-python-is-called-dynamically-typed/)).
+
+```python
+x = 10       # x é int
+x = "dez"  # agora x é str
+```
+
+Python também é considerada **fortemente tipada**, o que significa que conversões de tipo implícitas entre tipos incompatíveis não ocorrem ([explicação sobre tipagem forte em Python](https://stackoverflow.com/questions/11328920/is-python-strongly-typed)).
+
+#### Anotações de Tipo
+
+Desde o PEP 484, Python suporta **type hints**, que permitem anotar variáveis, parâmetros e retornos de funções para análise estática de tipos.
+
+```python
+from typing import List, Dict
+
+def saudacao(nome: str) -> str:
+    return f"Olá, {nome}!"
+
+idades: List[int] = [20, 30, 40]
+```
+
+- As dicas de tipo não afetam a execução em tempo de execução; servem para ferramentas de *lint* e *mypy*.
+- Consulte o [PEP 484 – Type Hints](https://peps.python.org/pep-0484/) e o módulo [typing](https://docs.python.org/3/library/typing.html) para mais informações.
+
+#### Conclusão
+
+Compreender variáveis, tipos de dados e tipagem em Python é essencial para escrever código claro, confiável e fácil de manter. A tipagem dinâmica oferece agilidade, enquanto as anotações de tipo trazem robustez adicional quando necessárias.
+
+## Bloco B - Controlando o Fluxo de Execução
+
+### Estruturas condicionais (`if`/`elif`/`else`)
+
+As estruturas `if`/`elif`/`else` permitem executar blocos de código conforme condições lógicas. Em Python, recomenda-se aproveitar o valor booleano das variáveis em vez de comparações explícitas. Por exemplo, em vez de `if x == True` ou `if x == None`, use `if x` ou `if x is None` (visto que `None` é considerado falso). Isso deixa o código mais claro e evita comparações desnecessárias. Use `elif` para testar vários casos em série e `else` como bloco padrão quando nenhuma condição anterior é verdadeira.
+
+É comum simplificar `if/else` para **uma única linha** usando o operador ternário:
+
+```python
+status = "positivo" if x > 0 else "não positivo"
+```
+
+Essa sintaxe concisa (`verdadeiro if condição else falso`) mantém a legibilidade e evita linhas longas. Para muitos casos de comparação, uma alternativa mais limpa é usar *mapeamento* (por exemplo, dicionário de funções) em vez de várias verificações `elif`. Por exemplo:
+
+```python
+# Abordagem com if/elif (mais verbosa)
+if n == 1:
+    plot_choropleth(data)
+elif n == 2:
+    plot_heatmap(data)
+elif n == 3:
+    plot_animation(data)
+else:
+    plot_bubblemap(data)
+
+# Abordagem idiomática usando lista/dicionário de funções
+funcs = {
+    1: plot_choropleth,
+    2: plot_heatmap,
+    3: plot_animation
+}
+func = funcs.get(n, plot_bubblemap)
+func(data)
+```
+
+Em Python tudo é objeto, incluindo funções – assim podemos armazená-las em listas ou dicionários e chamá-las por índice ou chave. Essa técnica “simula” um switch-case de forma mais elegante.
+
+**Quando usar:** Use `if/elif/else` para lógica condicional clara; prefira expressões ternárias (`a if cond else b`) para atribuições simples. Evite blocos muito aninhados; em casos complexos considere refatorar em funções menores ou usar mapeamento (dicionários/listas) para simplificar a escolha de ações. Sempre chegue em um caso padrão (`else`) para tratamento de situações não esperadas.
+
+### Laços de repetição (`for` e `while`) e práticas idiomáticas
+
+Os laços `for` e `while` permitem repetir código enquanto condições forem satisfeitas. Em Python, prefira **iterar diretamente sobre iteráveis** em `for` em vez de usar índices manualmente. Por exemplo, em vez de `for i in range(len(lista)): item = lista[i]`, faça:
+
+```python
+for item in lista:
+    processa(item)
+```
+
+Para obter índices junto com itens, use `enumerate()`, que é mais legível e otimizado que contar manualmente:
+
+```python
+for i, item in enumerate(lista, 1):
+    print(i, item)
+```
+
+Isso imprime o índice e o elemento (o `1` faz iniciar em 1).
+
+Quando precisar de listas filtradas ou transformações, **compreensões de lista** são poderosas e concisas:
+
+```python
+# Filtra números pares de 0 a 9
+pares = [x for x in range(10) if x % 2 == 0]
+```
+
+Segundo diretrizes de estilo, compreensões devem ser usadas para criar listas de forma clara e concisa. Se for apenas iterar uma vez sem necessidade de armazenar todos os valores, prefira **expressões geradoras** (usando parênteses), que economizam memória por avaliarem itens “sob demanda”. *Não use uma compreensão apenas para efeitos colaterais* (como imprimir dentro dela); nesses casos, mantenha o loop `for` tradicional para clareza.
+
+#### `for` vs. `while`
+
+Use `for` para percorrer coleções (listas, strings, range etc.). Use `while` quando a repetição depender de uma condição que não é iterar uma coleção, como aguardar uma condição de saída:
+
+```python
+count = 0
+while count < 10:
+    processa(count)
+    count += 1
+```
+
+#### Exemplos de boas práticas em laços
+
+**Usar `enumerate` em vez de contador manual:**
+
+  ```python
+  for i, v in enumerate(valores):
+      print(i, v)
+  ```
+
+  Isso é mais legível do que gerenciar uma variável de índice externamente.
+
+- **Não reinventar verificação de dicionário:** Prefira `if chave in d` ou `d.get(chave, valor_default)` a `try/except KeyError` quando apropriado, e evite usar métodos obsoletos como `has_key()`. O modo idiomático é:
+
+  ```python
+  valor = d.get('chave', 0)
+  ```
+
+- **Substituir loops simples por compr. ou filtros:** Ao transformar coleções, use comprehension:
+
+  ```python
+  quadrados = [x*x for x in nums]
+  ```
+
+  Em Python, construções concisas melhoram a legibilidade quando usadas corretamente.
+
+#### `break` e `continue`
+
+Dentro de loops, `break` e `continue` controlam o fluxo:
+
+- **`break`** encerra imediatamente o loop atual, saltando para a primeira instrução após o laço.
+- **`continue`** interrompe a iteração atual e retorna ao topo do laço para a próxima iteração, pulando o código subsequente no bloco.
+
+Por exemplo:
+
+```python
+for i in range(10):
+    if deve_parar(i):
+        break        # sai do loop completamente
+    if deve_pular(i):
+        continue     # pula apenas esta iteração
+    processa(i)
+```
+
+Em geral, não coloque código após `break` ou `continue` no mesmo nível de indentação, pois ele nunca será alcançado (será código morto). Use `break` quando precisar sair cedo do loop (por exemplo, achar o elemento desejado) e `continue` para pular condições indesejadas e seguir iterando.
+
+### Tratamento de Exceções (`try`/`except`/`else`/`finally`)
+
+O bloco `try` permite capturar erros em tempo de execução e tratá-los sem travar o programa. A sintaxe básica é:
+
+```python
+try:
+    # código que pode gerar exceções
+    faz_algo()
+except TipoDeErro as e:
+    # resposta ao erro específico
+    corrige_ou_reporta(e)
+else:
+    # (opcional) executa se não houve exceção
+    faz_se_nao_erro()
+finally:
+    # (opcional) executa sempre (cleanup)
+    finaliza_recursos()
+```
+
+Use **blocos `try` curtos**, contendo só o trecho crítico que pode falhar, para não capturar inadvertidamente outras exceções. Em Python é comum adotar o estilo **EAFP** (“easier to ask forgiveness than permission”): em vez de checar condições antecipadas (LBYL, “look before you leap”), simplesmente tente executar e trate exceções. Por exemplo, ao abrir um arquivo ou acessar chaves de dicionário, prefira:
+
+```python
+try:
+    conteúdo = arquivo.read()
+except FileNotFoundError:
+    print("Arquivo não encontrado")
+```
+
+em vez de verificar manualmente se o arquivo existe – isso evita condições de corrida. Segundo recomendações, use exceções para situações *inesperadas* e deixe o fluxo normal claro; não abuse de exceções como controle de fluxo principal, pois isso pode dificultar a leitura.
+
+**Quando usar:** `try/except` em blocos onde há I/O (arquivos, rede), conversões de tipo, ou operações que podem falhar. Use `else` para código que deve rodar somente se não houve erro, e `finally` para liberar recursos (ou use `with`, como abaixo). Prefira sempre capturar exceções específicas (por exemplo, `except KeyError`), evitando blocos `except:` genéricos e vazios.
+
+### Funções
+
+Funções estruturam o código em unidades reutilizáveis. Seguir boas práticas em funções torna o código mais legível e manutenível:
+
+- **Nomes descritivos:** Use nomes de função em *snake\_case* (letras minúsculas com underscores) conforme PEP 8. Comece com um verbo que indique a ação (por exemplo, `calcula_media()`, `conecta_banco()`). Evite nomes genéricos como `func` ou `my_function`.
+
+- **Argumentos e assinaturas:** Prefira argumentos posicionais e nomeados claros; use valores padrão quando apropriado. Use `*args`/`**kwargs` só quando necessário. Em métodos de classe, use `self` para o primeiro parâmetro e `cls` em métodos de classe.
+
+- **Docstrings e documentação:** Todas as funções públicas devem ter docstring explicando propósito, parâmetros e retorno. Isso facilita entendimento e geração de documentação. Funções auxiliares internas podem ter comentário curto após a definição.
+
+- **Responsabilidade única:** Cada função deve fazer uma coisa bem definida (princípio *Single Responsibility*). Funções muito longas ou com muitos níveis de indentação dificultam manutenção. Se uma função cresce demais, considere dividi-la. Essa modularização de código em funções pequenas melhora a testabilidade e legibilidade.
+
+- **Retornos antecipados (guard clauses):** Em vez de aninhar `if/else`, prefira sair cedo da função para casos de erro ou condição especial. Por exemplo:
+
+  ```python
+  def processa_lista(lst):
+      if not lst:
+          return []      # retorna cedo se lista vazia
+      resultado = []
+      for item in lst:
+          if deve_ignorar(item):
+              continue
+          resultado.append(transforma(item))
+      return resultado
+  ```
+
+  Esse estilo evita um nível extra de indentação e deixa mais claro os casos de borda.
+
+Exemplo de função bem estruturada:
+
+```python
+def ler_inteiros(filepath):
+    """Lê um arquivo de texto e retorna lista de inteiros, ignorando linhas não numéricas."""
+    inteiros = []
+    with open(filepath) as f:              # usa context manager para garantir fechamento
+        for line in f:
+            line = line.strip()
+            if not line:
+                continue
+            try:
+                num = int(line)
+            except ValueError:
+                continue
+            inteiros.append(num)
+    return inteiros
+```
+
+Aqui a função tem nome claro em snake\_case, docstring explicativa, tratamento de exceção local, e retorna resultados de forma consistente.
+
+### Geradores (`yield`)
+
+Geradores são funções especiais que usam a palavra-chave `yield` para produzir **iteradores preguiçosos** (lazy), gerando valores sob demanda sem armazenar toda a sequência em memória. São úteis para processar coleções grandes ou fluxos infinitos. Exemplo simples:
+
+```python
+def contagem_infinita():
+    i = 0
+    while True:
+        yield i
+        i += 1
+
+# Uso:
+gen = contagem_infinita()
+print(next(gen))  # 0
+print(next(gen))  # 1
+```
+
+Por ser *lazy*, um gerador não calcula os valores até que sejam solicitados (por `next()` ou em um laço `for`). Use geradores quando precisar iterar sobre muitos dados sem criar uma lista completa (economizando memória).
+
+**Boas práticas:** Lembre-se de que geradores são **de uso único**: após consumi-lo (por exemplo, convertendo em lista ou iterando até o fim), ele se esgota e não pode ser reutilizado. Se precisar repetir a iteração, crie um novo gerador ou converta-o em lista. Sempre use `yield` em vez de `return` para produzir múltiplos valores; usar `return` encerraria a função de uma vez. Documente claramente o comportamento dos seus geradores (o que eles esperam e retornam) e trate exceções localmente se houver risco de erro durante a iteração. Dessa forma, aproveita-se a **avaliação preguiçosa** (lazy evaluation) para eficiência em processamento de dados.
+
+### Gerenciadores de contexto (`with`)
+
+O comando `with` integra gerenciadores de contexto para automatizar *setup* e *teardown* de recursos, evitando vazamentos. Exemplos típicos são abrir arquivos, conexões de banco ou travas de thread. Em vez de:
+
+```python
+f = open('arquivo.txt')
+try:
+    data = f.read()
+finally:
+    f.close()
+```
+
+use:
+
+```python
+with open('arquivo.txt') as f:
+    data = f.read()
+```
+
+Assim, mesmo se ocorrer erro dentro do bloco, o arquivo será fechado automaticamente. Isso torna o código mais seguro e legível, pois abstrai o tratamento de recurso. Context managers embalam padrões comuns de inicialização/limpeza, garantindo que *sempre* executem o código de fechamento.
+
+Você também pode **criar context managers personalizados** (por classes com `__enter__`/`__exit__` ou usando `contextlib`). Esses são úteis para padronizar comportamentos repetitivos (por exemplo, conectar/desconectar de serviços). Em resumo, use `with` sempre que manipular recursos externos: ele implementa seu controle de fluxo, garantindo execução de código de finalização e evitando vazamentos.
+
+### Decoradores
+
+Decoradores são funções que envolvem outras funções (ou métodos) para **estender seu comportamento** sem modificar o código original. Usam-se para adicionar funcionalidades como logging, verificação de acesso, caching, temporização etc. A sintaxe idiomática é usar o símbolo `@decorator` acima da definição:
+
+```python
+import functools
+
+def debug(func):
+    @functools.wraps(func)
+    def wrapper(*args, **kwargs):
+        print(f"Chamando {func.__name__}{args}{kwargs}")
+        result = func(*args, **kwargs)
+        print(f"{func.__name__} retornou {result}")
+        return result
+    return wrapper
+
+@debug
+def soma(x, y):
+    return x + y
+
+print(soma(3, 4))
+# Saída:
+# Chamando soma(3, 4){}
+# soma retornou 7
+```
+
+Neste exemplo, `debug` envolve `soma`, imprimindo mensagens antes e depois da chamada. Note o uso de `@functools.wraps(func)` no wrapper: ele preserva o nome e docstring originais da função decorada (isso evita confusão em logs ou introspecção).
+
+Decoradores podem ser empilhados e a ordem importa: o código do topo envolve o seguinte. Sempre documente bem seu decorador e trate exceções internas se necessário. Em geral, use decoradores para **concerns transversais** (cross-cutting concerns) que você quer aplicar em várias funções de forma limpa.
+
+### Dicas de legibilidade, manutenção e organização
+
+- **Nomes claros:** Use nomes de variáveis/funções descritivos. Evite abreviações obscuras. Isso facilita a leitura do fluxo do código.
+- **Formatação consistente:** Siga padrões (PEP 8) para indentação (4 espaços), comprimento de linha (geralmente 79-80 colunas) e espaçamento. Ferramentas como **Black** ou **autopep8** ajudam a manter estilo uniforme.
+- **Comentários e docstrings:** Prefira código autoexplicativo, mas comente trechos não triviais. Mantenha docstrings completas em funções públicas.
+- **Modularização:** Separe o código em funções e módulos pequenos e coesos. Isso reduz a complexidade de cada bloco de fluxo de controle e facilita testes.
+- **Evitar códigos mortos:** Não deixe código após `return` ou após `break/continue` no mesmo nível. Linhas que nunca executam dificultam manutenção. Linters como **flake8** apontam esses trechos.
+- **Tratamento robusto de erros:** Não silencie exceções (“swallowing”). Cada `except` deve tratar ou relançar erros. Documente quais exceções podem ocorrer em cada função.
+- **Revisões de código:** Em equipes, faça code reviews focando em clareza do fluxo (uso de ifs, loops, exceções). Isso ajuda a compartilhar boas práticas entre desenvolvedores.
+
+Seguindo essas orientações e aproveitando os recursos de controle de fluxo do Python de forma idiomática, você escreverá código mais **claro**, **eficiente** e **profissional**, fácil de manter e estender.
+
+**Fontes:** Documentação e tutoriais oficiais do Python e artigos técnicos ilustram essas práticas e padrões. docs.python-guide.org realpython.com builtin.com peps.python.org datanovia.com realpython.com
